[project]
name = "email-triage-hub"
version = "1.0.0"
description = "OpenEnv Email Triage Hub - realistic business email triage environment for AI agent training"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Email Triage Hub Team" }
]
keywords = ["openenv", "email", "triage", "rl", "agent", "nlp"]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.20.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0.1",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["env", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
